2017-03-27         [RELEASE] Release of t3calendar 0.3.0 (Dirk Wenzel)
2017-03-27 6f1740b [BUGFIX] missing css for loading indicator added. (Dirk Wenzel)
2017-03-27 3593d83 [BUGFIX] missing class for ajax navigation added to month template. (Dirk Wenzel)
2017-03-24 449d3a5 [TASK] Templates improved:  Ajax JavaScript is only active if Ajax is enabled for widget. Anchors added to navigation links. (Dirk Wenzel)
2017-03-11 0e79de6 [TASK] travis ci configuration: use unit test config from package. (Dirk Wenzel)

2017-03-11         [RELEASE] Release of t3calendar 0.2.0 (Dirk Wenzel)
2017-03-10 dd1eebf [TASK] CalendarItemStorage now respects valid end dates of items and adds them for each day in between date and end date. (Dirk Wenzel)
2017-03-10 629ffc6 [TASK] calendar items are now added to a calendar day if they have a matching end date. (Dirk Wenzel)
2017-03-10 87b2063 [TASK] Allow to enable caching of widget content in Extension Manager configuration. Caching is disabled by default  now. (Dirk Wenzel)
2017-03-09 cb32029 [TASK] TemplateUtility implemented. CalendarController refactored using it. (Dirk Wenzel)
2017-03-08 d34e794 [TASK] prefer source install of typo3/cms and typo3/cms-core (Dirk Wenzel)
2017-03-08 b673071 [TASK] travis ci configuration: adapt TYPO3  build directory by version (Dirk Wenzel)
2017-03-08 1506d7c [TASK] require phpunit/phpunit: >=4.8.0,<5.4.0 (Dirk Wenzel)
2017-03-08 b50bbd1 [TASK] obsolete class stub removed. (Dirk Wenzel)
2017-03-08 f2b8625 [TASK] register t3calendar content cache with TYPO3 pages group (Dirk Wenzel)
2017-01-24 54045f8 [TASK] CalendarController now initializes its view by setting template and partial root path (with an array of paths - thus allowing to override single template/partial files) (Dirk Wenzel)
2017-01-23 4536ce1 [TASK] pass settings to partial Calendar/Item (Dirk Wenzel)
2017-01-20 f46da01 [TASK] partial Calendar/Item added, wrapping of items in partial Month improved. (Dirk Wenzel)