@@ -1,3 +1,14 @@
+2017-05-05         [RELEASE] Release of t3calendar 0.4.0 (Dirk Wenzel)
+2017-05-05 9051f3d [BUGFIX] errors in unit test fixed (Dirk Wenzel)
+2017-05-05 3c52151 [TASK] CalendarViewHelper now has an optional argument  ‘parameters’ of type array. Default templates adapted. (Dirk Wenzel)
+2017-04-28 963aad0 [TASK] composer.json: obsolete settings removed. (Dirk Wenzel)
+2017-04-28 759caab [BUGFIX] CalendarViewHelper: fixed issue caused by different implementation of AbstractWidgetViewHelper throughout TYPO3 versions. (Don't call parent::initializeArguments). (Dirk Wenzel)
+2017-04-27 2a3ec3e [TASK] CalendarViewHelper refactored: register arguments explicitly. Allow passing an array as configuration. CalendarContoller now generates a configuration from array. Documentation added. (Dirk Wenzel)
+2017-04-27 5586b06 [TASK] Documentation for path configuration added. (Dirk Wenzel)
+2017-04-25 6d09007 [TASK] travis-ci: use custom UnitTests.xml instead of those from testing frame work (Dirk Wenzel)
+2017-04-19 0dc58ce [TASK] fix travis-ci configuration (Dirk Wenzel)
+2017-04-19 caa571a [TASK] require-dev nimut/testing-framework (Dirk Wenzel)
+
 2017-03-27         [RELEASE] Release of t3calendar 0.3.0 (Dirk Wenzel)
 2017-03-27 6f1740b [BUGFIX] missing css for loading indicator added. (Dirk Wenzel)
 2017-03-27 3593d83 [BUGFIX] missing class for ajax navigation added to month template. (Dirk Wenzel)
